--- a/public/pages/apps/todo.html
+++ b/public/pages/apps/todo.html
@@ -708,6 +708,19 @@
 						<div class="col-lg-12">
 							<div class="card px-3">
 								<div class="card-body">
+                  <div class="dropdown">
+                      <button class="btn btn-info dropdown-toggle" type="button" id="dropdownMenuButton6" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Dropdown
+                      </button>
+                      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton6">
+                        <h6 class="dropdown-header">Settings</h6>
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Another action</a>
+                        <a class="dropdown-item" href="#">Something else here</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Separated link</a>
+                      </div>
+                    </div>
 									<h4 class="card-title">Todo list</h4>
 									<div class="add-items d-flex">
 										<input type="text" class="form-control todo-list-input" placeholder="What do you need to do today?">
