Chỉnh sửa module PAYC

--- a/public/pages/ui-features/notifications.html
+++ b/public/pages/ui-features/notifications.html
@@ -715,7 +715,7 @@
                     of toasts - success, info, warning and danger
                   </p>
                   <div class="template-demo d-flex justify-content-between flex-wrap">
-                    <button type="button" class="btn btn-inverse-success btn-fw" onclick="showSuccessToast()">Success</button>
+                    <button type="button" class="btn btn-inverse-success btn-fw" onclick="showSuccessToast('Phan Văn Thanh')">Success</button>
                     <button type="button" class="btn btn-inverse-info btn-fw" onclick="showInfoToast()">Info</button>
                     <button type="button" class="btn btn-inverse-warning btn-fw" onclick="showWarningToast()">Warning</button>
                     <button type="button" class="btn btn-inverse-danger btn-fw" onclick="showDangerToast()">Danger</button>
