Phan Văn Thanh - Add chức năng đăng ký tài khoản

--- a/public/pages/forms/advanced_elements.html
+++ b/public/pages/forms/advanced_elements.html
@@ -725,7 +725,7 @@
                 <div class="card-body">
                   <h4 class="card-title">Fontawesome rating</h4>
                   <p class="card-description">Simple rating with font-awesome icons</p>
-                  <select id="example-fontawesome" name="rating" autocomplete="off">
+                  <select id="example-fontawesome" name="rating1" autocomplete="off">
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -740,7 +740,7 @@
                 <div class="card-body">
                   <h4 class="card-title">CSS rating</h4>
                   <p class="card-description">CSS star rating</p>
-                  <select id="example-css" name="rating" autocomplete="off">
+                  <select id="example-css" name="rating1" autocomplete="off">
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
