PVT - Upgrade bao cao tuan

--- a/public/pages/ui-features/tooltips.html
+++ b/public/pages/ui-features/tooltips.html
@@ -784,7 +784,7 @@
                   <h4 class="card-title">Basic popover</h4>
                   <p class="card-description">Basic popover demo that appears on click</p>
 									<p>Click the below button for interactive demo</p>
-									<button type="button" class="btn btn-success" data-toggle="popover" title="Popover title" data-content="Sed posuere consectetur est at lobortis. Aenean eu leo quam.">Click me</button>
+									<button type="button" class="btn btn-success" data-toggle="popover" title="" data-content='<i class="fa fa-address-book"></i>'>Click me</button>
                 </div>
                 <div class="card-body">
                   <h4 class="card-title">Popover positions</h4>
